mirrored production pedagogydb settings
